--- a/Beryl_Attendance/Gemfile
+++ b/Beryl_Attendance/Gemfile
@@ -15,3 +15,5 @@ group :development, :test do
 end
 gem 'jquery-ui-rails'
 gem 'jquery-validation-rails'
+gem 'bootstrap-timepicker-rails', :require => 'bootstrap-timepicker-rails',
+                              :git => 'git://github.com/tispratik/bootstrap-timepicker-rails.git'
