--- a/Beryl_Attendance/Gemfile
+++ b/Beryl_Attendance/Gemfile
@@ -15,3 +15,5 @@ group :development, :test do
 end
 gem 'jquery-ui-rails'
 gem 'jquery-validation-rails'
+gem 'bootstrap-timepicker-rails'
+gem 'bootstrap-sass', '~> 2.3.1.0'
