--- a/employee_app/Gemfile
+++ b/employee_app/Gemfile
@@ -1,5 +1,8 @@
 source 'https://rubygems.org'
 
+
+gem 'jquery-ui-rails'
+gem 'jquery-validation-rails'
 gem 'devise'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.3'
