--- a/Beryl_Attendance/Gemfile
+++ b/Beryl_Attendance/Gemfile
@@ -17,3 +17,4 @@ gem 'jquery-ui-rails'
 gem 'jquery-validation-rails'
 gem 'jquery-datetimepicker-rails'
 gem 'bootstrap-timepicker-rails'
+gem 'rails_admin'
